added new quantile charts

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -488,6 +488,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tod_speed():\n",
+    "    df = pd.read_sql_query(\n",
+    "        rf\"\"\"select i.\"SPD_LIMIT\",\n",
+    "                    (i.spdwkd0610 - i.\"SPD_LIMIT\") as dif0610,\n",
+    "                    (i.spdwkd1519 - i.\"SPD_LIMIT\") as dif1519, \n",
+    "                    (i.spdwkd0006 - i.\"SPD_LIMIT\") as dif0006, \n",
+    "                    (i.spdwkd0607 - i.\"SPD_LIMIT\") as dif0607, \n",
+    "                    (i.spdwkd0708 - i.\"SPD_LIMIT\") as dif0708, \n",
+    "                    (i.spdwkd0809 - i.\"SPD_LIMIT\") as dif0809, \n",
+    "                    (i.spdwkd0910 - i.\"SPD_LIMIT\") as dif0910, \n",
+    "                    (i.spdwkd1011 - i.\"SPD_LIMIT\") as dif1011, \n",
+    "                    (i.spdwkd1112 - i.\"SPD_LIMIT\") as dif1112, \n",
+    "                    (i.spdwkd1213 - i.\"SPD_LIMIT\") as dif1213, \n",
+    "                    (i.spdwkd1314 - i.\"SPD_LIMIT\") as dif1314, \n",
+    "                    (i.spdwkd1415 - i.\"SPD_LIMIT\") as dif1415, \n",
+    "                    (i.spdwkd1516 - i.\"SPD_LIMIT\") as dif1516, \n",
+    "                    (i.spdwkd1617 - i.\"SPD_LIMIT\") as dif1617, \n",
+    "                    (i.spdwkd1718 - i.\"SPD_LIMIT\") as dif1718, \n",
+    "                    (i.spdwkd1819 - i.\"SPD_LIMIT\") as dif1819, \n",
+    "                    (i.spdwkd1920 - i.\"SPD_LIMIT\") as dif1920, \n",
+    "                    (i.spdwkd2021 - i.\"SPD_LIMIT\") as dif2021, \n",
+    "                    (i.spdwkd2122 - i.\"SPD_LIMIT\") as dif2122, \n",
+    "                    (i.spdwkd2223 - i.\"SPD_LIMIT\") as dif2223, \n",
+    "                    (i.spdwkd2300 - i.\"SPD_LIMIT\") as dif2300 \n",
+    "                from rejoined.inrix i\n",
+    "                where i.\"SPD_LIMIT\" = 25\n",
+    "                           \"\"\",\n",
+    "        con=ENGINE,\n",
+    "    )\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = tod_speed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SPD_LIMIT    25.000000\n",
+       "dif0610      -0.504575\n",
+       "dif1519      -1.432505\n",
+       "dif0006       1.116719\n",
+       "dif0607       1.709309\n",
+       "dif0708      -0.826531\n",
+       "dif0809      -1.201880\n",
+       "dif0910      -0.456471\n",
+       "dif1011      -0.389334\n",
+       "dif1112      -0.863248\n",
+       "dif1213      -0.899154\n",
+       "dif1314      -0.945305\n",
+       "dif1415      -1.052593\n",
+       "dif1516      -1.450216\n",
+       "dif1617      -1.676305\n",
+       "dif1718      -1.646445\n",
+       "dif1819      -0.641978\n",
+       "dif1920       0.285925\n",
+       "dif2021       0.520496\n",
+       "dif2122       1.003092\n",
+       "dif2223       1.980072\n",
+       "dif2300       1.763287\n",
+       "Name: 0.95, dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T = df.quantile(.95)\n",
+    "T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.763287362999998"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T[21]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
